--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "dotenv": "^16.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -26,6 +27,7 @@
     "nodemon": "^3.0.3",
     "puppeteer": "^13.7.0",
     "validator": "^13.11.0",
-    "winston": "^3.12.0"
+    "winston": "^3.12.0",
+    "ws": "^8.16.0"
   }
 }
